#include <hydrogen/core/protocol_communicators.h>
#include <hydrogen/core/utils.h>
#include <spdlog/spdlog.h>
#include <thread>
#include <chrono>

// Note: This is a placeholder implementation
// In a real implementation, you would use the gRPC C++ library

namespace hydrogen {
namespace core {

/**
 * @brief Concrete implementation of gRPC communicator
 */
class GrpcCommunicatorImpl : public GrpcCommunicator {
public:
    GrpcCommunicatorImpl(const GrpcConfig& config) 
        : GrpcCommunicator(config) {
        SPDLOG_INFO("gRPC Communicator initialized for server {}", config_.serverAddress);
    }

    ~GrpcCommunicatorImpl() {
        disconnect();
    }

    bool connect() override {
        if (connected_.load()) {
            return true;
        }

        try {
            SPDLOG_INFO("Connecting to gRPC server {}", config_.serverAddress);
            
            // TODO: Implement actual gRPC channel creation
            // grpc::ChannelArguments args;
            // args.SetMaxReceiveMessageSize(config_.maxReceiveMessageSize);
            // args.SetMaxSendMessageSize(config_.maxSendMessageSize);
            // 
            // if (config_.useTls) {
            //     auto creds = grpc::SslCredentials(grpc::SslCredentialsOptions());
            //     channel_ = grpc::CreateCustomChannel(config_.serverAddress, creds, args);
            // } else {
            //     channel_ = grpc::CreateCustomChannel(config_.serverAddress, 
            //                                        grpc::InsecureChannelCredentials(), args);
            // }
            
            // For now, simulate connection
            std::this_thread::sleep_for(std::chrono::milliseconds(100));
            
            connected_.store(true);
            
            SPDLOG_INFO("Connected to gRPC server successfully");
            return true;
            
        } catch (const std::exception& e) {
            SPDLOG_ERROR("Failed to connect to gRPC server: {}", e.what());
            connected_.store(false);
            return false;
        }
    }

    void disconnect() override {
        if (!connected_.load()) {
            return;
        }

        SPDLOG_INFO("Disconnecting from gRPC server");
        
        connected_.store(false);
        streaming_.store(false);
        
        // TODO: Close gRPC channel and cleanup streams
        
        SPDLOG_INFO("Disconnected from gRPC server");
    }

    bool isConnected() const override {
        return connected_.load();
    }

    CommunicationResponse sendUnaryRequest(const CommunicationMessage& message) override {
        CommunicationResponse response;
        response.messageId = message.messageId;
        response.deviceId = message.deviceId;
        response.timestamp = std::chrono::system_clock::now();

        if (!connected_.load()) {
            response.success = false;
            response.errorCode = "NOT_CONNECTED";
            response.errorMessage = "Not connected to gRPC server";
            return response;
        }

        try {
            SPDLOG_DEBUG("Sending unary gRPC request: {}", message.command);
            
            auto startTime = std::chrono::steady_clock::now();
            
            // TODO: Implement actual gRPC unary call
            // grpc::ClientContext context;
            // context.set_deadline(std::chrono::system_clock::now() + message.timeout);
            // 
            // DeviceRequest request;
            // request.set_device_id(message.deviceId);
            // request.set_command(message.command);
            // request.set_payload(message.payload.dump());
            // 
            // DeviceResponse grpcResponse;
            // grpc::Status status = stub_->SendCommand(&context, request, &grpcResponse);
            
            // For now, simulate successful response
            std::this_thread::sleep_for(std::chrono::milliseconds(50));
            
            auto endTime = std::chrono::steady_clock::now();
            response.responseTime = std::chrono::duration_cast<std::chrono::milliseconds>(endTime - startTime);
            
            response.success = true;
            response.payload = json{{"result", "success"}, {"echo", message.payload}};
            
            return response;
            
        } catch (const std::exception& e) {
            SPDLOG_ERROR("Failed to send unary gRPC request: {}", e.what());
            response.success = false;
            response.errorCode = "RPC_ERROR";
            response.errorMessage = e.what();
            return response;
        }
    }

    bool startClientStreaming(const std::string& method) override {
        if (!connected_.load()) {
            SPDLOG_WARN("Cannot start client streaming: not connected");
            return false;
        }

        try {
            SPDLOG_INFO("Starting client streaming for method: {}", method);
            
            // TODO: Implement actual gRPC client streaming
            // grpc::ClientContext context;
            // stream_ = stub_->ClientStreamingMethod(&context, &response_);
            
            streaming_.store(true);
            return true;
            
        } catch (const std::exception& e) {
            SPDLOG_ERROR("Failed to start client streaming: {}", e.what());
            return false;
        }
    }

    bool startServerStreaming(const std::string& method, const CommunicationMessage& request) override {
        if (!connected_.load()) {
            SPDLOG_WARN("Cannot start server streaming: not connected");
            return false;
        }

        try {
            SPDLOG_INFO("Starting server streaming for method: {}", method);
            
            // TODO: Implement actual gRPC server streaming
            // grpc::ClientContext context;
            // DeviceRequest grpcRequest;
            // grpcRequest.set_device_id(request.deviceId);
            // grpcRequest.set_command(request.command);
            // 
            // stream_ = stub_->ServerStreamingMethod(&context, grpcRequest);
            
            streaming_.store(true);
            
            // Start reading thread for server streaming
            streamThread_ = std::thread(&GrpcCommunicatorImpl::serverStreamingLoop, this);
            
            return true;
            
        } catch (const std::exception& e) {
            SPDLOG_ERROR("Failed to start server streaming: {}", e.what());
            return false;
        }
    }

    bool startBidirectionalStreaming(const std::string& method) override {
        if (!connected_.load()) {
            SPDLOG_WARN("Cannot start bidirectional streaming: not connected");
            return false;
        }

        try {
            SPDLOG_INFO("Starting bidirectional streaming for method: {}", method);
            
            // TODO: Implement actual gRPC bidirectional streaming
            // grpc::ClientContext context;
            // stream_ = stub_->BidirectionalStreamingMethod(&context);
            
            streaming_.store(true);
            
            // Start reading thread for bidirectional streaming
            streamThread_ = std::thread(&GrpcCommunicatorImpl::bidirectionalStreamingLoop, this);
            
            return true;
            
        } catch (const std::exception& e) {
            SPDLOG_ERROR("Failed to start bidirectional streaming: {}", e.what());
            return false;
        }
    }

    bool sendStreamMessage(const CommunicationMessage& message) override {
        if (!streaming_.load()) {
            SPDLOG_WARN("Cannot send stream message: no active stream");
            return false;
        }

        try {
            SPDLOG_DEBUG("Sending stream message: {}", message.command);
            
            // TODO: Implement actual stream message sending
            // DeviceRequest request;
            // request.set_device_id(message.deviceId);
            // request.set_command(message.command);
            // request.set_payload(message.payload.dump());
            // 
            // return stream_->Write(request);
            
            return true;
            
        } catch (const std::exception& e) {
            SPDLOG_ERROR("Failed to send stream message: {}", e.what());
            return false;
        }
    }

    void finishStream() override {
        if (!streaming_.load()) {
            return;
        }

        SPDLOG_INFO("Finishing gRPC stream");
        
        streaming_.store(false);
        
        if (streamThread_.joinable()) {
            streamThread_.join();
        }
        
        // TODO: Close gRPC stream
        // if (stream_) {
        //     stream_->WritesDone();
        //     grpc::Status status = stream_->Finish();
        // }
    }

private:
    void serverStreamingLoop() {
        SPDLOG_DEBUG("gRPC server streaming loop started");
        
        while (streaming_.load()) {
            try {
                // TODO: Implement actual stream reading
                // DeviceResponse response;
                // if (stream_->Read(&response)) {
                //     if (streamHandler_) {
                //         streamHandler_(response.payload());
                //     }
                // } else {
                //     break; // Stream ended
                // }
                
                // For now, simulate periodic messages
                std::this_thread::sleep_for(std::chrono::milliseconds(100));
                
            } catch (const std::exception& e) {
                SPDLOG_ERROR("Error in server streaming loop: {}", e.what());
                if (errorHandler_) {
                    errorHandler_(e.what());
                }
                break;
            }
        }
        
        SPDLOG_DEBUG("gRPC server streaming loop stopped");
    }

    void bidirectionalStreamingLoop() {
        SPDLOG_DEBUG("gRPC bidirectional streaming loop started");
        
        while (streaming_.load()) {
            try {
                // TODO: Implement actual bidirectional stream reading
                // Similar to server streaming but also allows writing
                
                std::this_thread::sleep_for(std::chrono::milliseconds(100));
                
            } catch (const std::exception& e) {
                SPDLOG_ERROR("Error in bidirectional streaming loop: {}", e.what());
                if (errorHandler_) {
                    errorHandler_(e.what());
                }
                break;
            }
        }
        
        SPDLOG_DEBUG("gRPC bidirectional streaming loop stopped");
    }

    std::thread streamThread_;
};

// Factory method implementation
std::unique_ptr<GrpcCommunicator> ProtocolCommunicatorFactory::createGrpcCommunicator(const GrpcConfig& config) {
    return std::make_unique<GrpcCommunicatorImpl>(config);
}

} // namespace core
} // namespace hydrogen
